<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.cowwoc.styler</groupId>
	<artifactId>styler</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Styler Java Code Formatter</name>
	<description>An unopinionated Java code formatter</description>

	<modules>
		<module>ast</module>
		<module>security</module>
		<module>discovery</module>
		<module>config</module>
		<module>error-catalog</module>
		<module>formatter</module>
		<module>parser</module>
		<module>pipeline</module>
		<module>cli</module>
		<module>maven-plugin</module>
		<module>benchmark</module>
	</modules>

	<properties>
		<project.root.basedir>${project.basedir}</project.root.basedir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<checkstyle.version>11.0.1</checkstyle.version>
		<pmd.version>7.19.0</pmd.version>
		<maven.plugin.api.version>3.9.6</maven.plugin.api.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Internal dependencies -->
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-security</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-discovery</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-parser</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-formatter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-config</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-pipeline</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.styler</groupId>
				<artifactId>styler-error-catalog</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- External dependencies -->
			<dependency>
				<groupId>tools.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-toml</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>com.puppycrawl.tools</groupId>
				<artifactId>checkstyle</artifactId>
				<version>${checkstyle.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.requirements</groupId>
				<artifactId>requirements-java</artifactId>
				<version>12.0</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.pmd</groupId>
				<artifactId>pmd-java</artifactId>
				<version>${pmd.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-core</artifactId>
				<version>${maven.plugin.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${maven.plugin.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugin-tools</groupId>
				<artifactId>maven-plugin-annotations</artifactId>
				<version>3.11.0</version>
			</dependency>

			<dependency>
				<groupId>org.apache.maven.plugin-testing</groupId>
				<artifactId>maven-plugin-testing-harness</artifactId>
				<version>3.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>7.8.0</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.24.2</version>
			</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.16</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.7.6</version>
		</dependency>
		<dependency>
			<groupId>io.github.classgraph</groupId>
			<artifactId>classgraph</artifactId>
			<version>4.8.179</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.37</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.37</version>
		</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.4</version>
					<configuration>
						<parallel>methods</parallel>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.5.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
					<configuration>
						<force>true</force>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.1</version>
					<configuration>
						<compilerArgs>
							<arg>
								-Xlint:all,-module,-requires-automatic,-requires-transitive-automatic,-missing-explicit-ctor,-preview
							</arg>
							<arg>-Xdiags:verbose</arg>
							<arg>-Werror</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.15.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.9.9</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<ruleSet>
						<rules>
							<rule>
								<groupId>org.apache.maven.plugins</groupId>
								<ignoreVersions>
									<ignoreVersion>
										<type>regex</type>
										<version>.+(-|\.)(alpha|beta).+|.+-rc(-|\.).*</version>
									</ignoreVersion>
								</ignoreVersions>
							</rule>
							<rule>
								<ignoreVersions>
									<ignoreVersion>
										<type>regex</type>
										<version>(?i)(.+-snapshot|.+(-|\.)M\d|.+(-|\.)(alpha|beta).+)|.+-rc(-|\.|\d).*</version>
									</ignoreVersion>
								</ignoreVersions>
							</rule>
						</rules>
					</ruleSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>${project.root.basedir}/config/checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<failOnViolation>true</failOnViolation>
					<linkXRef>false</linkXRef>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
					<excludeGeneratedSources>true</excludeGeneratedSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.26.0</version>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-javascript</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-jsp</artifactId>
						<version>${pmd.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<includeTests>true</includeTests>
					<rulesets>
						<ruleset>${project.root.basedir}/config/pmd.xml</ruleset>
						<ruleset>${project.root.basedir}/config/pmd-main.xml</ruleset>
					</rulesets>
					<printFailingErrors>true</printFailingErrors>
					<analysisCache>true</analysisCache>
					<linkXRef>false</linkXRef>
					<targetJdk>${maven.compiler.release}</targetJdk>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>